k8s/NetflixFrontend/ingress.yaml
# k8s/ingress-demo.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-frontend
spec:
  ingressClassName: nginx
  rules:
  - host: alonit-netflix-lb-1568761756.eu-north-1.elb.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-frontend-service
            port:
              number: 3000
